# disease-eradication-plan

./: .cursorignore  .cursorrules  .dockerignore  .env.example  .env.example.bak  .gitignore  .gitmodules  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .quartoignore  .test-chat-file.qmd  .test-vector-file.qmd  01-problem.md  02-solution.md  03-platform.md  ACCURACY_AUDIT.md  ACCURACY_FIX_PLAN.md  AIRTABLE_GUIDE.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTENT_REVIEW_CHECKLIST.md  CONTRIBUTING.md  DESIGN_GUIDE.md  DIH_WEBSITE_README.md  DOCKER-BUILD-SUMMARY.md  DOCKER-HTML-BUILD.md  DOCKER-WEBSITE-BUILD.md  Dockerfile.html-build  Dockerfile.pdf-build  Dockerfile.website-build  ECONOMICS-IMPROVEMENT-PLAN.md  ECONOMICS-OUTLINE-WITH-LATEX-RECOMMENDATIONS.md  FAQ.md  FILE-ORGANIZATION.md  FORMATTING_GUIDE.md  FULL_OUTLINE.md  LICENSE  Makefile  (+148 more)
.claude/: settings.local.json
.clinerules/: CONTENT_STANDARDS.md  MISSION_AND_PRINCIPLES.md
.cursor/: mcp.json
.devcontainer/: README.md  devcontainer.json
.github/: FUNDING.yml  pull_request_template.md
.husky/: pre-commit  pre-push
GUIDES/: CONTENT_REVIEW_PROCESS.md  CONTENT_STANDARDS.md  DESIGN_GUIDE.md  ECONOMICS_HIERARCHY_FINAL.md  FORMATTING_GUIDE.md  MISSION_AND_PRINCIPLES.md  STYLE_GUIDE.md  TECHNICAL_GUIDE.md
LEGAL/: Master_Service_Agreement.md  SERVICES_AGREEMENT.md  SOW-01_PLATFORM_BLUEPRINT.md  SOW-01_Strategic_Blueprint.md
act/: act-details.md  act-naming-considerations.md  act-summary.md
agent/: README.md  tsconfig.json
agents/: global-health-unifier.md  study-review-agent.md
analytics/: causal-inference-analysis.md
architecture/: blueprint.md  dih-onchain-architecture.md  organizational-structure.md
archive/: CONSOLIDATION_REPORT.md  CONTRIBUTING.md  FAQ.md  act.md  consolidation-summary.md  dfda.md  index.md  wishocracy.md
assets/: 344293488.csv  IMAGE-GUIDE.md  README.md  all-of-us-development-spending.csv  fda-regulations-and-life-span.psd  military-spending-chart.py  propaganda-theme.scss  thinkbynumbers-images-guide.md
benefits/: benefits-to-pharma.md  benefits.md  cost-savings-from-decentralized-clinical-trials.md  faster-progress.md  improving-treatment-affordability-and-accessibility.md  lower-costs-of-validated-observational-research-for-efficacy.md  lower-costs.md  lower-drug-prices.md  more-cures-and-less-lifelong-attempts-at-masking-symptoms.md  overall-economic-benefits.md  patient-participation.md  time-to-treatment.md
blueprint/: blueprint-gas.md  blueprint-high-level.md  blueprint-sitemap.md  blueprint-strategy.md  blueprint-summary.md  blueprint.md
careers/: ROLE_TEMPLATE.md  ai-engineer.md  applicant-evaluation-workflow.md  capital-markets-lead.md  elections-ie-compliance-lead.md  growth-referrals-lead.md  hiring-plan.md  job-application-form.md  peace-dividend-analytics-lead.md  reference-check-process.md  security-audit-lead.md
communication/: be-everywhere.html  contests.html  exit-interviews.html  google-optimize.html  impactful-people.html  livestreams.html  marketing-goals.html  marketing-reminders.html  marketing-updates.html  network-building.html  propose-a-social-media-post.html  series-content.html  tools.html  top-contributors.html
community/: CONTRIBUTING.md  README.md  nonprofit-partnership-incentives.md  nonprofits.md  open-source-projects.md  open-source.html  opencures.md
community_directory/: CONTRIBUTING.md  README.md
compensation/: aragon-dao-accounting.md  bonuses.html  bounty-token-calculations.html  compensation-for-quests-and-tasks.html  compensation-for-work-prior-to-clickup.html  multisignature-wallets.md  other-compensation-amounts.html  our-tokens.html  weekly-token-compensation.html
conditions/: long-covid.html  pelizaeus-merzbacher-disease.md  scabies.md
dao-members/: type-of-dao-members.html
data/: analytical-model-and-property-descriptions.html  data-types-and-quantities.html
design-lab/: design-links-and-related-docs.html
developer-docs/: javascript-getting-started.html
diagrams/: platform-diagram.html
dih-economic-models/: .gitignore  _chart_style.py  _quarto.yml  index.qmd  references.qmd  setup.py
dih_models/: __init__.py  bibtex_generator.py  chart_generators.py  compute_context.py  economist-survey.ts  formatting.py  latex_generation.py  parameter_search.py  parameters-calculations-citations.ts  parameters.py  parameters.ts  parameters_and_calculations_qmd_generator.py  parameters_snippet.py  quarto_formatting.py  reference_ids.py  reference_ids_generator.py  reference_parser.py  survey_generator.py  typescript_generator.py  uncertainty.py  usage_analyzer.py  validation.py  variables_yml_generator.py
dih_models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
disease-eradication-act/: act-naming-considerations.md  act-v3.md  disease-eradication-act-cost-benefit-analysis.md  disease-eradication-act-details.md  disease-eradication-act-summary.md  disease-eradication-act-v2.md  disease-eradication-act.md
docs/: ENVIRONMENT_STATUS.md  NUMBER_LINKING_QUICKSTART.md  NUMBER_MANAGEMENT.md  NUMBER_SYSTEM_OVERVIEW.md  PRE_COMMIT_SETUP.md  QUARTO_SETUP.md  agent-architecture-plan.md  data-dictionary.md  glossary.md  validation.md
economic-models/: benefits-of-over-the-counter-classification.md  benfits-of-over-the-counter-classification.md  cost-benefit-analysis-for-drug-classification.md  create_chart.py  dfda-cost-benefit-analysis-chatgpt-o1.md  dfda-cost-benefit-analysis-claude-3.5-sonnet.md  dfda-cost-benefit-analysis-deepseek-r1.md  dfda-cost-benefit-analysis-gemini-2-thinking.md  dfda-cost-benefit-analysis-perplexity-r1.md  dfda-cost-benefit-analysis-qwen2.5-max.md  dfda-cost-benefit-analysis-you-genious-agent.md  dfda-cost-benefit-analysis.md  dih-treasury-cash-flow-model.md  financial-model-placeholder.csv  fundraising-and-budget-plan.md  fundraising-strategy.md  intervention-comparison-table.md  investor-risk-analysis.md  nih-grant-efficiency-analysis.md  operational-budget-and-financial-model.md  peace-dividend-value-capture.md  pre-seed-terms.md  victory-bond-investment-thesis.md  (+1 more)
(+2749 files in other folders)
