[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dih-models"
version = "0.1.0"
description = "How to End War and Disease"
authors = [
    {name = "Mike P. Sinn", email = "mike@dih.earth"}
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "numpy",
    "numpy-financial",
    "matplotlib",
    "seaborn",
    "plotly",
    "PyYAML",
    # Jupyter ecosystem for Quarto
    "jupyter",
    "ipykernel",
    "nbformat",
    "nbclient",
    "jupyter-client",
    "jupyter-core",
    "traitlets",
    "notebook",
    "nbconvert",
    "ipywidgets",
    "jupyterlab",
]

[project.optional-dependencies]
dev = [
    "pytest",
    # Code quality tools (minimal, practical setup)
    "pre-commit",  # Git hooks framework
    "ruff",  # Fast linter/formatter (replaces flake8, black, isort, mypy)
    # Legacy (can be removed after migrating to ruff)
    "black",
    "flake8",
]

[tool.setuptools]
packages = ["dih_models", "dih_models.plotting"]

# Ruff configuration (replaces flake8, black, isort)
[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_strict_optional = true

# Flake8 configuration (disable line-length rule E501)
[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E501",  # line too long
]

